# protocol-benchmark

./: Cargo.toml  README.md
src/: main.rs  simulator.rs
tcp/: Cargo.toml
udp/: Cargo.toml  docker-compose.yml
udp/docker/: Dockerfile
udp/docker/client/: Dockerfile
udp/docker/server/: Dockerfile
udp/src/: client_main.rs  main.rs  server_main.rs  shared.rs
