[package]
name = "udp"
version = "0.1.0"
authors = ["Justin LeFebvre <jstnlefebvre@gmail.com>"]
edition = "2018"

[dependencies]
get_if_addrs = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[[bin]]
name = "udp-client"
path = "src/client_main.rs"

[[bin]]
name = "udp-server"
path = "src/server_main.rs"
